# sync-mht

./: .gitmodules  .travis.yml  Dockerfile  LICENSE  Main.hs  README.md  Test.hs  configure.hs  coverage.sh  package.yaml  stack.yaml  sync-mht.cabal  sync-mht.sublime-project
benchmarks/: pom.xml
benchmarks/src/main/java/com/github/ekarayel/syncmht/benchmarks/: Authorize.java  Constants.java  Main.java  StartupScript.java  Stop.java
benchmarks/src/main/resources/: Dockerfile  benchmarks.sh  startup.sh  sync-mht-benchmark-3fe707ebe6a9.p12
driver/: Main.hs
src/: Benchmarks.hs  Main.hs  Test.hs
src/Sync/MerkleTree/: Analyse.hs  Channel.hs  Client.hs  CommTypes.hs  Run.hs  Server.hs  Sync.hs  Test.hs  Trie.hs  Types.hs
src/Sync/MerkleTree/Util/: Communication.hs  GetFromInputStream.hs  Progress.hs  RPCClient.hs  RequestMonad.hs
src/hs/: Main.hs
src/hs/Sync/MerkleTree/: Server.hs  Sync.hs  Trie.hs  Types.hs
src/hs/Sync/MerkleTree/Util/: RequestMonad.hs
src/main/hs/: Main.hs
src/main/hs/Sync/MerkleTree/: Analyse.hs  Client.hs  CommTypes.hs  Run.hs  Server.hs  Sync.hs  Test.hs  Trie.hs  Types.hs
src/main/hs/Sync/MerkleTree/Util/: RequestMonad.hs
test/Sync/MerkleTree/: RunSpec.hs  SyncSpec.hs  TrieSpec.hs
test/Sync/MerkleTree/Util/: ProgressSpec.hs  RPCClientSpec.hs
