name:                sync-mht
version:             0.1.0.0

synopsis:            Fast incremental file transfer

-- A longer description of the package.
-- description:

license:             MIT
license-file:        LICENSE
author:              Emin Karayel <me@eminkarayel.de>
maintainer:          Emin Karayel <me@eminkarayel.de>

package-url:         https://github.com/ekarayel/sync-mht
category:            Utility

build-type:          Simple

cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/ekarayel/sync-mht

executable sync-mht
  main-is:             Main.hs
  other-extensions:    FlexibleInstances, StandaloneDeriving
  ghc-options: -Wall
  build-depends:       base >=4.7 && <4.8, unix >=2.7 && <2.8, directory >=1.2 && <1.3, filepath >=1.3 && <1.4, process >=1.2 && <1.3, cryptohash >=0.11 && <0.12, byteable >=0.1 && <0.2, array >=0.5 && <0.6, containers >=0.5 && <0.6, text >=1.2 && <1.3, bytestring >=0.10 && <0.11, base64-bytestring >=1.0 && <1.1, base16-bytestring >=0.1 && <0.2, cereal >= 0.4, io-streams, transformers

  hs-source-dirs:      src/hs
  default-language:    Haskell2010
